# swamp

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: build.yml  codeql.yml  flakehub-publish-tagged.yml  lint.yml  release.yml  update-flake.yml
openspec/changes/archive/2026-06-09-add-worktree-logging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-add-worktree-logging/specs/diagnostic-logging/: spec.md
openspec/changes/archive/2026-06-10-nest-inner-zellij-session/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-nest-inner-zellij-session/specs/repo-session-launch/: spec.md
openspec/changes/archive/2026-06-10-remove-tab-pinning/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-remove-tab-pinning/specs/daemon-tui-status/: spec.md
openspec/changes/archive/2026-06-10-remove-tab-pinning/specs/repo-session-launch/: spec.md
openspec/changes/archive/2026-06-11-progressive-worktree-pr-load/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-11-progressive-worktree-pr-load/specs/daemon-tui-status/: spec.md
openspec/changes/archive/2026-06-11-progressive-worktree-pr-load/specs/github-pr-ci-status/: spec.md
openspec/changes/archive/2026-06-11-show-ci-status-in-worktrees-pane/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-11-show-ci-status-in-worktrees-pane/specs/daemon-tui-status/: spec.md
openspec/changes/archive/2026-06-11-show-ci-status-in-worktrees-pane/specs/github-pr-ci-status/: spec.md
openspec/changes/archive/2026-06-29-main-branch-special-display/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-main-branch-special-display/specs/daemon-tui-status/: spec.md
openspec/specs/agent-status-config/: spec.md
openspec/specs/daemon-tui-status/: spec.md
openspec/specs/diagnostic-logging/: spec.md
openspec/specs/github-pr-ci-status/: spec.md
openspec/specs/repo-session-launch/: spec.md
openspec/specs/worktree-management/: spec.md
src/: cli.rs  codex_notify.rs  config.rs  github.rs  hook.rs  kill.rs  launch.rs  logging.rs  main.rs  util.rs  worktree.rs  zellij.rs
src/config/: claude.rs  codex.rs  config.toml  lazygit.yml  paths.rs  starship.toml  types.rs
src/daemon/: mod.rs  resources.rs  socket.rs  state.rs  watcher.rs
src/github/: checks.rs  context.rs  graphql.rs  rest.rs  types.rs
src/launch/: layout.rs
src/tui/: client.rs  event.rs  icons.rs  input.rs  mod.rs  state.rs  theme.rs  view.rs
src/tui/view/: ai.rs  mod.rs  picker.rs  pr.rs  resources.rs  worktrees.rs
src/worktree/: branches.rs  create.rs  model.rs  remove.rs  repo.rs  status.rs
