[package]
name = "swamp"
version = "0.4.0"
edition = "2024"
description = "Zellij-integrated git worktree dashboard"
license = "MIT"

[[bin]]
name = "swamp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
# Local-only worktree/status operations: no network, so no ssh/https (and thus no
# openssl/libssh2). `vendored` builds libgit2 from source for the static-musl targets.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
notify = "6"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
