[package]
name = "swamp"
version = "0.4.6"
edition = "2024"
description = "Zellij-integrated git worktree dashboard"
license = "MIT"

[[bin]]
name = "swamp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crossterm = "0.29"
# Local-only worktree/status operations: no network, so no ssh/https (and thus no
# openssl/libssh2). `vendored` builds libgit2 from source for the static-musl targets.
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
notify = "8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
toml_edit = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1
